--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
              <a href="#"><img src="Images/line.PNG" style="width:100%"></a>
         </div>
         <div style="flex:1;padding-left:5px;">
-          <a href="https://cifuentes01.github.io/Web_phase2/" target="_blank"><img src="Images/regional.PNG style="width:100%"></a>
+          <a href="https://cifuentes01.github.io/Web_phase2/" target="_blank"><img src="Images/regional.PNG" style="width:100%"></a>
         </div>
         </div>
         <div class="rowval">
@@ -77,7 +77,7 @@
           <a href="#"><img src="Images/linear.PNG" style="width:100%"></a>
         </div>
         <div style="flex:1;padding-right:5px;">
-          <a href="https://cifuentes01.github.io/Web_phase2/" target="_blank"><img src="Resources/assets/images/Fig4.png" style="width:100%"></a>
+          <a href="https://cifuentes01.github.io/Web_phase2/" target="_blank"><img src="Images/boxplot.PNG" style="width:100%"></a>
         </div>
         </div>
       </div>
